--- a/index.html
+++ b/index.html
@@ -51,29 +51,29 @@
 <body>
  
     <header>
-        <h1>Welcome to My Sample Webpage</h1>
+        <h1>Fresno Yacht Club</h1>
     </header>
  
     <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="#">Dock</a>
+        <a href="#">Market Place</a>
+        <a href="#">Offers and Deals</a>
     </nav>
  
     <main>
         <h2>About This Page</h2>
-        <p>This is a simple HTML webpage created as a sample for learning how to publish websites. You can use this page to practice uploading and publishing your own content online.</p>
+        <p>Welcome to Fresno Yacht Club, where your ultimate yachting experience begins. With a passion for the open sea and a commitment to exceptional service, we specialize in offering a diverse range of luxury yachts tailored to your lifestyle. Our knowledgeable team is dedicated to helping you navigate the world of yachting, ensuring you find the perfect vessel to create unforgettable memories on the water. Delve into our curated selection and let us guide you on your journey to yacht ownership.</p>
         
-        <h3>Features</h3>
+        <h3>Whats our specialty?</h3>
         <ul>
-            <li>Easy to edit and customize.</li>
-            <li>Basic styling with CSS.</li>
-            <li>Responsive layout that looks good on all devices.</li>
+            <li>Offering Luxury Yacht Deals.</li>
+            <li>Professional and Expert maintenance support.</li>
+            <li>Expert Brokage Services.</li>
         </ul>
     </main>
  
     <footer>
-        &copy; 2024 My Sample Webpage. All rights reserved.
+        &copy; 2024 Fresno Yacht Club. All rights reserved.
     </footer>
  
 </body>
