--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sample Webpage</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Kanit, sans-serif;
             background-color: #f4f4f9;
             margin: 0;
             padding: 20px;
@@ -15,7 +15,7 @@
         }
  
         header {
-            background-color: #4CAF50;
+            background-color: #0f98fa;
             color: white;
             padding: 10px 0;
             text-align: center;
