--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
  
         nav a {
             text-decoration: none;
-            color: #4CAF50;
+            color: #0f98fa;
             margin: 0 15px;
             font-weight: bold;
         }
