--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
  
         main {
             padding: 20px;
-            background-color: #fff;
+            background-color: #80a1ad;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
