--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: Kanit, sans-serif;
-            background-color: #f4f4f9;
+            background-color: #a1e6ff;
             margin: 0;
             padding: 20px;
             color: #333;
@@ -35,7 +35,7 @@
  
         main {
             padding: 20px;
-            background-color: #80a1ad;
+            background-color: #c7c7c7;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
