--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: Kanit, sans-serif;
-            background-color: #a1e6ff;
+            background-color: #fafafa;
             margin: 0;
             padding: 20px;
             color: #333;
